Implement service/image URL templating
Allow a template URL to be provided for service name and image name. If
either `SERVICE_URL_TEMPLATE` or `IMAGE_URL_TEMPLATE` are set then they
will be used as Python format strings with components of each
service/image available,

e.g.:

IMAGE_URL_TEMPLATE=https://github.com/{organization}/{repository}/commits/{tag}

--- a/app/files/css/base.scss
+++ b/app/files/css/base.scss
@@ -5,6 +5,7 @@ $mount-button: #824747;
 
 $modal-background-color: #000000aa;
 
+$url-hover-color: #3798db99;
 $background-color: #222;
 $background-color-secondary: #333;
 $background-color-translucent: rgba(34, 34, 34, 0.9);
