--- a/app/files/css/mapping.scss
+++ b/app/files/css/mapping.scss
@@ -41,8 +41,12 @@
   font-family: sans-serif;
   font-size: 0.8em;
   padding: 0.2em 0.4em;
-  margin-left: 1em;
   display: inline;
+  margin-left: 1em;
+}
+
+.compact .mapping.btn {
+  margin-left: 0.6em;
 }
 
 .mapping.btn .icon {
