Fix toggling of services when clicking image link
Do not select/deselect service when clicking image link.

Add a hover highlight for service rows.

--- a/app/files/css/base.scss
+++ b/app/files/css/base.scss
@@ -9,6 +9,7 @@ $url-hover-color: #3798db99;
 $background-color: #222;
 $background-color-secondary: #333;
 $background-color-translucent: rgba(34, 34, 34, 0.9);
+$background-color-highlight: #292929;
 
 $status-light-healthy: #28a74555;
 $status-light-healthy-shadow: rgba(0, 0, 34, 0.7);
