--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -3,10 +3,53 @@
     {% if env == 'production' %}
       <link rel="stylesheet" href="/files/main-{{ css_md5 }}.css"></link>
     {% endif %}
+    <style>
+      .loader-wrapper {
+        width: 100%;
+        height: 100%;
+        background-color: #222;
+        padding-top: 150px;
+      }
+
+      .loader {
+        margin: 0 auto;
+        width: 600px;
+        height: 448px;
+        background-image: url('/files/images/logo.svg');
+        background-repeat: no-repeat;
+      }
+
+      /* https://css-tricks.com/making-css-animations-feel-natural/ */
+
+      .bounce {
+          animation-name: bounce;
+          animation-timing-function: ease;
+          align-self: flex-end;
+          animation-duration: 2s;
+          animation-iteration-count: infinite;
+          transform-origin: bottom;
+      }
+
+      @keyframes bounce {
+        0%   { transform: scale(1,1)      translateY(0); }
+        10%  { transform: scale(1.1,.9)   translateY(0); }
+        30%  { transform: scale(.9,1.1)   translateY(-100px); }
+        50%  { transform: scale(1.05,.95) translateY(0); }
+        57%  { transform: scale(1,1)      translateY(-7px); }
+        64%  { transform: scale(1,1)      translateY(0); }
+        100% { transform: scale(1,1)      translateY(0); }
+      }
+
+    </style>
   </head>
   <body>
     <div id="wrapper">
-      <div id="content"></div>
+      <div id="content">
+        <div class="loader-wrapper">
+          <div class="loader bounce">
+          </div>
+        </div>
+      </div>
     </div>
     {% if env == 'development' %}
       <script src="http://localhost:8081/files/bundle.js"></script>
