Include more information in task tooltip
Include sha256 and container name in task tooltip.

Misc. CSS fixes.

--- a/app/files/css/base.scss
+++ b/app/files/css/base.scss
@@ -1,5 +1,5 @@
 $port-published: #9d9;
-$port-target: #dd9;
+$port-target: #999;
 
 $mount-button: #824747;
 
@@ -15,6 +15,7 @@ $status-light-healthy: #28a74555;
 $status-light-healthy-shadow: rgba(0, 0, 34, 0.7);
 
 $highlight-select: #dd9;
+$highlight-select-accent: #375a7e55;
 
 $accent-dark: #555;
 
