Improve UI activity indicators
Use a power light icon on each node flashing orange to indicate a
heartbeat.

Highlight updating services more clearly (pulse orange background
colour).

Add tooltip to network indicator.

--- a/app/files/css/base.scss
+++ b/app/files/css/base.scss
@@ -10,11 +10,12 @@ $background-color: #222;
 $background-color-secondary: #333;
 $background-color-translucent: rgba(34, 34, 34, 0.9);
 $background-color-highlight: #292929;
+$background-color-updating: #7b613a94;
 
-$status-light-healthy: #28a74555;
-$status-light-healthy-shadow: rgba(0, 0, 34, 0.7);
+$status-light-healthy: #bf9208d1;
 
-$highlight-select: #dd9;
+$highlight-select: #bf9208d1;
+$highlight-select-background: rgba(240,240,102,0.1);
 $highlight-select-accent: #375a7e55;
 
 $accent-dark: #555;
