--- a/app/files/css/node.scss
+++ b/app/files/css/node.scss
@@ -7,10 +7,7 @@
 }
 
 .node {
-  border: 1px solid $background-color-secondary;
   padding: 0.4em;
-  border-radius: 15px;
-  box-shadow: 0px 0px 5px $accent-dark;
   margin-bottom: 1em;
   width: 18em;
   white-space: nowrap;
@@ -31,13 +28,22 @@
 }
 
 .node {
-  background-color: $background-color;
+  background-color: $background-color-highlight;
   transition: background-color 0.8s ease;
 }
 
-.node.ping {
-  background-color: $status-light-healthy;
-  transition: background-color 0.4s ease;
+.node .light {
+  height: 1.2em;
+  width: 1.2em;
+  color: $accent-dark;
+  opacity: 0.8;
+  transition: color 1500ms, opacity 1500ms;
+}
+
+.node.ping .light {
+  opacity: 1;
+  color: $status-light-healthy;
+  transition: color 700ms ease, opacity 700ms;
 }
 
 .minimized .node {
@@ -70,10 +76,11 @@
 
 .minimized .node .hostname {
   font-size: 0.9em;
+  margin-left: 0.3em;
 }
 
 .node.highlight {
-  box-shadow: 0px 0px 10px $highlight-select;
+  box-shadow: 0px 0px 1px $highlight-select;
 }
 
 .node h2 {
