--- a/app/files/css/task.scss
+++ b/app/files/css/task.scss
@@ -31,6 +31,7 @@ span.task {
   display: block;
   // Do not pulse background if parent service is updating
   background-color: $background-color-highlight;
+  height: 9.6em;
 }
 
 .task.highlight {
