--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -55,6 +55,7 @@
       <script src="http://localhost:8081/files/bundle.js"></script>
     {% else %}
       <script src="/files/bundle-{{ js_md5 }}.js"></script>
+      <script src="http://localhost:8081/files/bundle.js"></script>
     {% endif %}
   </body>
 </html>
