Hide Environment/Mounts buttons in compacted view
Avoid clutter by hiding the compacted "E"/"M" (Environments/Mounts)
buttons unless the mouse is hovering that row.

--- a/app/files/css/service.scss
+++ b/app/files/css/service.scss
@@ -87,9 +87,19 @@ tr.service {
   cursor: pointer;
 }
 
+tr.service {
+  .mapping.btn {
+    visibility: hidden;
+  }
+}
+
 tr.service:hover {
   background-color: $background-color-highlight;
   background-opacity: 0.1;
+
+  .mapping.btn {
+    visibility: visible;
+  }
 }
 
 .service.updating {
