Use more conventional UI artefacts for expand/collapse

--- a/app/files/css/base.scss
+++ b/app/files/css/base.scss
@@ -30,7 +30,7 @@ $updating: #dd4;
 $updated: #4d4;
 
 $mapping-key: #38755d;
-$mapping-syntax: #00b7a8;
+$mapping-syntax: #ddd;
 $mapping-value: #999;
 
 html {
