--- a/app/files/css/stack.scss
+++ b/app/files/css/stack.scss
@@ -24,8 +24,9 @@
 
 .stack {
   .icon.expand {
-    height: 1.2rem;
-    width: 1.2rem;
+    height: 1.3rem;
+    width: 1.3rem;
+    margin-right: 0.2em;
   }
 }
 
