Display a warning icon if there is an image mismatch
If image digest hashes do not match then display an alert warning next
to the image (in place of the Tick icon when the images are sync'ed).

Also polish the UI a little bit - improve spacing and colouring, use
nicer icons, expand wording in tooltips.

--- a/app/files/css/service.scss
+++ b/app/files/css/service.scss
@@ -133,6 +133,10 @@ tr.service.highlight.networked {
   padding-top: 0.6em;
 }
 
+.expanded .service-icon {
+  margin-right: 0.4em;
+}
+
 .service .mode-icon {
   color: $label-text-dark;
   height: 1em;
@@ -168,8 +172,11 @@ tr.service.highlight.networked {
 }
 
 .service .updated {
-  color: $updated;
   margin-right: 0.4em;
+}
+
+.service-updated-tooltip {
+  text-align: left;
 }
 
 /* https://loading.io/css/ */
