Add `calculator` process to store data and build charts
`stats` service now also sends data to `calculator` process. Data is
stored with a time code and used to generate chart data on-request.

Workflow:

* Front end requests a chart
* Web app forwards request to chart builder process and responds
  immediately with request ID
* Chart builder process finishes building chart and sends chart data to
  original requester via web app service
* Front end matches chart data to request and launches callback to
  display chart data

`calculator` process stores data using sqlite3.

Tasks (a.k.a. containers) now have a new icon for displaying chart data.

--- a/app/files/css/base.scss
+++ b/app/files/css/base.scss
@@ -4,8 +4,10 @@ $port-target: #999;
 $mount-button: #824747;
 
 $modal-background-color: #000000aa;
+$modal-background-hover-color: #222222f8;
 
 $url-hover-color: #3798db99;
+$button-background-hover-color: #374f5a33;
 $background-color: #222;
 $background-color-secondary: #333;
 $background-color-translucent: rgba(34, 34, 34, 0.9);
