--- a/app/files/css/task_stats.scss
+++ b/app/files/css/task_stats.scss
@@ -1,6 +1,8 @@
 .task-stats {
   margin-top: 0.8em;
   white-space: nowrap;
+  margin-left: -0.6em;
+  margin-top: -0.5em;
 }
 
 .task-stats .usage {
