Fix misc. loose ends re: new calculator service
Use correct paths, environment variables, etc. for new service and
various changes to project layout as a result of
replicating/restructuring things.

etc.

--- a/app/files/css/task.scss
+++ b/app/files/css/task.scss
@@ -3,7 +3,6 @@
 }
 
 .task .badge {
-  text-shadow: 0px 0px 5px $accent-dark;
   text-align: center;
   display: block;
   margin: 0.4em 0;
@@ -47,9 +46,15 @@ span.task {
   padding: 0.8em 1.2em;
 }
 
+.task .chart .header h5 {
+  margin-left: 1em;
+  color: $label-text;
+}
+
 .task .chart .close-icon {
   visibility: hidden;
   text-align: right;
+  float: right;
   padding: 0.3em;
   width: 100%;
   display: block;
