--- a/app/files/css/base.scss
+++ b/app/files/css/base.scss
@@ -38,11 +38,6 @@ html {
   font-size: 14px;
 }
 
-.badge {
-  color: $label-text;
-  text-shadow: 0px 0px 5px $accent-dark;
-}
-
 .badge.dense {
   margin: 0 !important;
 }
@@ -68,6 +63,7 @@ html {
   width: 100%;
   height: 100%;
   overflow: auto;
+  margin-left: 20em;
   background-color: $background-color-translucent;
 }
 
