--- a/app/files/css/node.scss
+++ b/app/files/css/node.scss
@@ -35,7 +35,7 @@
 .node .light {
   height: 1.2em;
   width: 1.2em;
-  color: $accent-dark;
+  color: $outline-dark;
   opacity: 0.8;
   transition: color 1500ms, opacity 1500ms;
 }
