--- a/app/files/css/node_stats.scss
+++ b/app/files/css/node_stats.scss
@@ -19,7 +19,7 @@
   text-align: center;
   width: 100%;
   color: $label-text-light;
-  text-shadow: 0px 0px 5px $accent-dark;
+  text-shadow: 0px 0px 5px $outline-dark;
   padding: 0.2em;
 }
 
