--- a/app/files/css/stack.scss
+++ b/app/files/css/stack.scss
@@ -33,7 +33,7 @@
 .stack.header th {
   font-size: 1.4em;
   font-family: monospace;
-  color: $accent-dark;
+  color: $outline-dark;
   margin: 0.4em 1em;
 }
 
@@ -49,7 +49,7 @@
 }
 
 tr.collapsed div.stack {
-  border-top: 1px solid $accent-dark;
+  border-top: 1px solid $outline-dark;
   padding-top: 0.2em;
 }
 
