Add Node charts
Add charts for Node CPU, RAM, and Load.

Refactor things into base classes to avoid repetition.

--- a/app/files/css/base.scss
+++ b/app/files/css/base.scss
@@ -51,6 +51,15 @@ html {
   }
 }
 
+.chart-button {
+  color: $label-text;
+}
+
+.chart-button:hover {
+  color: $accent-dark;
+  cursor: pointer;
+}
+
 .modal-wrapper {
   display: none;
 }
