--- a/app/files/css/node.scss
+++ b/app/files/css/node.scss
@@ -16,6 +16,11 @@
 #nodes.maximized .node {
   display: inline-block;
   margin: 1em;
+  padding-top: 0.8em;
+
+  .badges {
+    margin-top: 0.2em;
+  }
 }
 
 .node .status {
@@ -33,6 +38,7 @@
 }
 
 .node .light {
+  position: fixed;
   height: 1.2em;
   width: 1.2em;
   color: $outline-dark;
@@ -76,7 +82,6 @@
 
 .minimized .node .hostname {
   font-size: 0.9em;
-  margin-left: 0.3em;
 }
 
 .node.highlight {
@@ -90,8 +95,20 @@
   clear: both;
 }
 
-.maximized .node h2 {
+.node h2.hostname {
+  width: 12.8em;
+  max-width: 12.8em;
   font-size: 1.2em;
+  overflow-x: hidden;
+  text-overflow: ellipsis;
+  margin-left: 1.4em;
+}
+
+.maximized .node h2.hostname {
+  display: inline-block;
+  width: 15em;
+  max-width: 15em;
+  margin-top: -0.2em;
 }
 
 .node h3 {
@@ -127,7 +144,6 @@
   padding: 0.2em;
   font-size: 1.0em;
   display: inline;
-  margin-left: 0.2em;
 }
 
 .node .badge {
