--- a/app/files/css/main.scss
+++ b/app/files/css/main.scss
@@ -3,6 +3,7 @@
 @import "bootstrap.darkly.css";
 @import "base.scss";
 @import "chart.scss";
+@import "overview.scss";
 @import "dashboard.scss";
 @import "mapping.scss";
 @import "mounts.scss";
