--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -15,7 +15,7 @@
         margin: 0 auto;
         width: 600px;
         height: 448px;
-        background-image: url('/files/images/logo.svg');
+        background-image: url('files/images/logo.svg');
         background-repeat: no-repeat;
       }
 
