--- a/app/files/css/dashboard.scss
+++ b/app/files/css/dashboard.scss
@@ -1,3 +1,8 @@
+#dashboard {
+  padding-top: 2em;
+  height: 100%;
+}
+
 h2.section-header {
   font-size: 1.4em;
   margin: 0.8em 0;
@@ -5,7 +10,7 @@ h2.section-header {
 }
 
 .toggle-section {
-  height: 100%;
+  height: $window-height;
   padding: 0;
   float: left;
   width: 28px; /* In pixels because we use this to calculate screen offsets */
