Refactor modal code
Create `Modal` React component to simplify and standardise displaying
modals (currently charts and mapping [environment/mounts] popups).

--- a/app/files/css/chart.scss
+++ b/app/files/css/chart.scss
@@ -1,51 +1,22 @@
-.chart {
+.chart-wrapper {
   z-index: 9999999999;
   width: 62em;
   min-height: 38em;
 }
 
-.chart .loading {
+.chart-wrapper .loading {
   height: 100%;
   font-size: 1em;
   font-style: oblique;
   text-align: center;
 }
 
-.chart .header {
-  padding: 1em;
-}
-
-.chart .header h5 {
-  color: $label-text;
-  text-align: center;
-}
-
-.chart .close-icon {
-  display: block;
-  visibility: hidden;
-  text-align: right;
-  float: right;
-  padding: 0.3em;
-  width: 100%;
-}
-
-.chart-content {
-  padding: 1em;
-}
-
-.chart.ready:hover {
+.chart-wrapper.ready:hover {
   background-color: $modal-background-hover-color;
 }
 
-.chart .subtitle {
-  text-align: right;
-  color: $label-text-dark;
-  display: block;
-  font-family: monospace;
-  width: 100%;
-  margin-top: -1.8em;
-  font-style: oblique;
-  opacity: 0.5;
+.chart {
+  padding: 1em;
 }
 
 .chart .no-data {
