--- a/app/files/css/main.scss
+++ b/app/files/css/main.scss
@@ -2,6 +2,7 @@
 @import "bootstrap.css";
 @import "bootstrap.darkly.css";
 @import "base.scss";
+@import "modal.scss";
 @import "chart.scss";
 @import "overview.scss";
 @import "dashboard.scss";
