--- a/app/files/css/chart.scss
+++ b/app/files/css/chart.scss
@@ -1,3 +1,12 @@
+.chart-button {
+  color: $label-text;
+}
+
+.chart-button:hover {
+  color: $accent-dark;
+  cursor: pointer;
+}
+
 .chart-wrapper {
   z-index: 9999999999;
   width: 62em;
