--- a/app/files/css/modal.scss
+++ b/app/files/css/modal.scss
@@ -1,3 +1,41 @@
+.modal-wrapper {
+  display: none;
+}
+
+.modal-wrapper.modal {
+  display: block;
+  position: fixed;
+  cursor: pointer;
+  z-index: 999999999;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: $background-color-translucent;
+}
+
+.modal-content {
+  cursor: initial;
+  background-color: $modal-background-color;
+  height: auto;
+  max-height: 60%;
+  width: 80%;
+  margin: 5em auto;
+  border: 2px solid $outline-dark;
+  box-shadow: 0px 0px 5px $background-color;
+
+  .viewport {
+    overflow-y: scroll;
+    border-bottom: 1px solid $outline-dark;
+    margin-bottom: 1em;
+  }
+}
+
+.modal-content:hover {
+  background-color: $modal-background-hover-color;
+}
+
 .modal .header {
   padding: 1em;
   border-bottom: 1px solid $outline-dark;
