--- a/app/files/css/dashboard.scss
+++ b/app/files/css/dashboard.scss
@@ -1,6 +1,8 @@
 #dashboard {
-  padding-top: 2em;
   height: 100%;
+  position: absolute;
+  top: 0;
+  margin-top: 1.8em;
 }
 
 h2.section-header {
