Include swarm summary in overview
When not hovering any section in overview, display a summary about the
swarm (name, created/updated date).

--- a/app/files/css/base.scss
+++ b/app/files/css/base.scss
@@ -26,7 +26,7 @@ $accent: #629dda;
 $accent-dark: #375a7e;
 $accent-background: #4868af6b;
 
-$label-text: #ddd;
+$label-text: #ccc;
 $label-text-secondary: #dedede;
 $label-text-subheading: #aaa;
 $label-text-light: #eee;
