Add compact logo for minimized overview

--- a/app/files/css/overview.scss
+++ b/app/files/css/overview.scss
@@ -3,7 +3,12 @@ $overview-height: 8.5em;
 $overview-section-width: 130px;
 
 .overview-minimized {
-  height: 2em;
+  background-image: url('../images/logo-compact.svg');
+  background-repeat: no-repeat;
+  background-position: 0.2em 0;
+  background-size: auto 2em;
+  opacity: 0.6;
+  height: 2.2em;
   display: block;
   cursor: pointer;
   margin-right: 1em;
