Refactor overview detail renderer
Include more statistics.

Refactor back end monitor for efficiency.

Highlight overview section on hover.

--- a/app/files/css/base.scss
+++ b/app/files/css/base.scss
@@ -1,3 +1,5 @@
+$transparent: #00000000;
+
 $port-published: #9d9;
 $port-target: #999;
 
@@ -22,6 +24,7 @@ $highlight-select-accent: #375a7e55;
 
 $outline: #555;
 $outline-dark: #333;
+$outline-background: #32322f55;
 $accent: #629dda;
 $accent-dark: #375a7e;
 $accent-background: #4868af6b;
