--- a/app/files/css/base.scss
+++ b/app/files/css/base.scss
@@ -1,3 +1,8 @@
+$overview-sticky-height: 2.4em;
+$overview-height: 8.5em;
+// Using `em` creates weird rounding issues and off-by-one pixel alignment
+$overview-section-width: 130px;
+
 $transparent: #00000000;
 
 $port-published: #9d9;
