--- a/app/files/css/dashboard.scss
+++ b/app/files/css/dashboard.scss
@@ -2,7 +2,7 @@
   height: calc(100% - 2em);
   position: absolute;
   top: 0;
-  margin-top: 2.2em;
+  margin-top: $overview-sticky-height;
 }
 
 h2.section-header {
