--- a/app/files/css/service.scss
+++ b/app/files/css/service.scss
@@ -133,8 +133,13 @@ tr.service.highlight.networked {
   padding-top: 0.6em;
 }
 
-.expanded .service-icon {
+.service-icon {
   margin-right: 0.4em;
+  margin-left: 0.2em;
+  .icon {
+    height: 1.5em;
+    width: 1.5em;
+  }
 }
 
 .service .mode-icon {
@@ -171,36 +176,35 @@ tr.service.highlight.networked {
   }
 }
 
-.service .updated {
-  margin-right: 0.4em;
-}
-
 .service-updated-tooltip {
   text-align: left;
 }
 
-/* https://loading.io/css/ */
-
-.service .updating {
-  display: inline-block;
-  top: 0.4em;
-  content: " ";
-  width: 0.8em;
-  height: 0.8em;
-  margin: 1px;
-  margin-right: 0.4em;
-  border-radius: 50%;
-  border: 2px solid $updating;
-  border-color: $updating transparent $updating transparent;
-  animation: lds-dual-ring 1.2s linear infinite;
+.service .updating .icon {
+  color: $updating;
+  animation: keyframes_rotate 2s cubic-bezier(0.39, 0.84, 0.66, 0.49) infinite;
 }
 
-@keyframes lds-dual-ring {
+@keyframes keyframes_rotate {
   0% {
     transform: rotate(0deg);
+    opacity: 0.9;
+  }
+  25% {
+    opacity: 0.7;
+  }
+  50% {
+    opacity: 0.5;
+  }
+  75% {
+    opacity: 0.5;
+  }
+  90% {
+    opacity: 0.7;
   }
   100% {
     transform: rotate(360deg);
+    opacity: 0.9;
   }
 }
 
