Refactor and expand overview section
Refactor overview section into subsection components.

Expand overview content; include more detailed information about
containers/tasks and networks.

--- a/app/files/css/base.scss
+++ b/app/files/css/base.scss
@@ -2,6 +2,10 @@ $overview-sticky-height: 2.4em;
 $overview-height: 8.5em;
 // Using `em` creates weird rounding issues and off-by-one pixel alignment
 $overview-section-width: 130px;
+$overview-highlight-hover: #ffffff33;
+$overview-highlight-select: #ffffff55;
+$overview-count: #ffffff55;
+$overview-count-select: #ffffff77;
 
 $transparent: #00000000;
 
