Expand overview content
Include URL to homepage in Skep section.

Include count of published services in Services section.

--- a/app/files/css/overview.scss
+++ b/app/files/css/overview.scss
@@ -58,6 +58,7 @@
   }
 
   .spacer {
+    cursor: pointer;
     width: 12.5em;
     display: inline-block;
     float: left;
@@ -174,6 +175,10 @@
     .detail-value {
       color: $label-text;
       font-family: monospace;
+
+      a {
+        color: $url-hover-color;
+      }
     }
 
     .detail-icon {
