Use Redux to handle service highlighting
Re-implement service selection functionality:
  * Highlight selected service
  * Highlight nodes running a task for selected service
  * Highlight (secondary colour) networked services

Now using Redux to set and retrieve state so code is much more modular.

--- a/app/files/css/service.scss
+++ b/app/files/css/service.scss
@@ -126,7 +126,7 @@ tr.service.selected {
   background-color: $highlight-select-background;
 }
 
-tr.service.highlight.networked {
+tr.service.networked {
   background-color: rgba(45,80,180,0.2);
 }
 
